--- a/be-search/src/main/resources/application.properties
+++ b/be-search/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=be-search
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/chart_db
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.show-sql=true
