--- a/be-search/build.gradle
+++ b/be-search/build.gradle
@@ -27,11 +27,25 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'io.github.openfeign.querydsl:querydsl-jpa:7.0'
+    annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:7.0:jakarta'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+tasks.register('cleanQuerydsl') {
+    doLast {
+        delete(layout.buildDirectory.dir("generated/sources/annotationProcessor"))
+    }
+}
+
+tasks.named('clean') {
+    doLast {
+        delete(layout.buildDirectory.dir("generated/tmp"))
+    }
 }
 
 tasks.named('test') {
